# mcp-knowledge-service

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  main.py  pyproject.toml
.github/skills/evaluate-retrieval/: SKILL.md
.github/skills/ingest-knowledge/: SKILL.md
.github/skills/package-clean/: SKILL.md
.github/skills/setup-environment/: SKILL.md
.github/skills/verify-mcp-server/: SKILL.md
config/: settings.example.yaml
docs/: ARCHITECTURE.md  EVALUATION.md  INGESTION.md  INTEGRATION.md  PROJECT_EVIDENCE.md  ROADMAP.md
eval/datasets/: salon_retrieval.jsonl
eval/snapshots/: README.md  verified_20260724_9017a43.json
examples/salon/: README.md  ingest_salon_example.py
examples/salon/knowledge_sources/: booking_and_cancellation_policy.md  hair_coloring_care.md  membership_and_after_sales.md  perm_and_scalp_care.md  service_catalog_guide.md  store_information.md  stylist_specialty_guide.md
scripts/: __init__.py  evaluate.py  ingest.py  query.py  start_dashboard.py  verify_evaluation_snapshot.py
src/core/: settings.py  types.py
src/core/query_engine/: __init__.py  query_processor.py  sparse_retriever.py
src/core/response/: __init__.py  citation_generator.py  response_builder.py
src/core/trace/: trace_collector.py
src/ingestion/: pipeline.py
src/libs/: __init__.py  http_client.py
src/mcp_server/: protocol_handler.py  server.py
src/observability/: __init__.py  logger.py
tests/: __init__.py
tests/e2e/: test_data_ingestion.py
tests/fixtures/: generate_complex_pdf.py  golden_test_set.json
tests/integration/: test_chunk_refiner_llm.py  test_dense_encoder_azure.py  test_ingestion_trace.py  test_mcp_server.py  test_metadata_enricher_llm.py  test_pdf_loader_integration.py
tests/unit/: test_batch_processor.py  test_bm25_indexer_roundtrip.py  test_config_loading.py  test_core_types.py  test_custom_evaluator.py  test_embedding_providers_smoke.py  test_eval_runner.py  test_evaluation_snapshot.py  test_http_client.py  test_llm_factory.py  test_llm_providers_smoke.py  test_loader_pdf_contract.py  test_pipeline_progress.py  test_smoke_imports.py  test_trace_context.py
(+21 files in other folders)
