[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-knowledge-service"
version = "0.1.0"
description = "Reusable MCP-based knowledge retrieval service with ingestion, hybrid retrieval, citations, and collection isolation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Yunhao Huang" }
]
keywords = ["mcp", "rag", "hybrid-retrieval", "chromadb", "bm25", "rrf", "knowledge-service"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pyyaml>=6.0",
    "langchain-text-splitters>=0.3.0",
    "chromadb>=0.4.0",
    "mcp>=1.0.0",
    "jieba>=0.42",
    "markitdown[pdf]>=0.1.0",
    "streamlit>=1.30.0",
    "ragas>=0.1.0",
    "datasets>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "pytest-mock>=3.14",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "openai>=1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (may require external services)",
    "e2e: End-to-end tests (full system tests)",
    "llm: marks tests that require real LLM API calls (deselect with '-m \"not llm\"')",
    "slow: Slow tests that should be run less frequently",
]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
